--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirection vers Appel</title>
-    <script type="text/javascript">
-        window.onload = function() {
-            window.location.href = "tel:+242064605858";
-        };
-    </script>
+    <meta http-equiv="refresh" content="3;url=https://www.facebook.com/LopangoApp/?locale=fr_FR">
+    <title>Redirection...</title>
 </head>
 <body>
-    <p>Redirection en cours pour lancer l'appel...</p>
+    <p>Vous allez être redirigé vers le site principal...</p>
 </body>
 </html>
