--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3;url=https://www.facebook.com/LopangoApp/?locale=fr_FR">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        window.location.replace("https://www.facebook.com/LopangoApp/?locale=fr_FR"); // Remplacez par votre URL cible
+    </script>
     <title>Redirection...</title>
 </head>
 <body>
-    <p>Vous allez être redirigé vers le site principal...</p>
+    <p>Si vous n'êtes pas redirigé automatiquement, cliquez <a href="https://www.facebook.com/LopangoApp/?locale=fr_FR">ici</a>.</p>
 </body>
 </html>
