--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        window.location.replace("https://www.instagram.com/bolingo_brazzaville/p/CxneNQzq-WW/?img_index=1"); // Remplacez par votre URL cible
+        window.location.replace("https://www.instagram.com/"); // Remplacez par votre URL cible
     </script>
     <title>Redirection...</title>
 </head>
 <body>
-    <p>Si vous n'êtes pas redirigé automatiquement, cliquez <a href="https://www.instagram.com/bolingo_brazzaville/p/CxneNQzq-WW/?img_index=1">ici</a>.</p>
+    <p>Si vous n'êtes pas redirigé automatiquement, cliquez <a href="https://www.instagram.com/">ici</a>.</p>
 </body>
 </html>
