--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=https://google.com">
+    <meta http-equiv="refresh" content="0;url=https://www.facebook.com">
     <script>
-        window.location.replace("https://www.google.com/"); // Remplacez par votre URL cible
+        window.location.replace("https://www.facebook.com/"); // Remplacez par votre URL cible
     </script>
     <title>Redirection...</title>
 </head>
 <body>
-    <p>Si vous n'êtes pas redirigé automatiquement, cliquez <a href="https://www.google.com/">ici</a>.</p>
+    <p>Si vous n'êtes pas redirigé automatiquement, cliquez <a href="https://www.facebook.com/">ici</a>.</p>
 </body>
 </html>
